<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F3D2C1"
            app:titleTextColor="@color/blue_text"
            app:title="@string/app_name" />

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:background="#F3D2C1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:layout_marginTop="10dp"
                android:background="@drawable/image_corners">


                <ViewFlipper
                    android:id="@+id/vif"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:autoStart="true"
                    android:flipInterval="2000"
                    android:inAnimation="@android:anim/slide_in_left"
                    android:outAnimation="@android:anim/slide_out_right">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/keyhouse" />


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/home" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/apar" />

                </ViewFlipper>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/vif"
                    android:layout_marginBottom="30dp">

                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/rectangle_background"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="0dp"
                        app:layout_constraintDimensionRatio="H,1:"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <ImageButton
                            android:layout_width="240dp"
                            android:layout_height="150dp"
                            android:layout_margin="15dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/mawlaptop"
                            android:contentDescription="@string/app_name"
                            android:onClick="rentYourProp"
                            android:padding="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/addHome"
                            android:textColor="@color/blue_text"
                            android:textSize="25dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="250dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rectangle_background"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ll1">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/renthome"
                            android:contentDescription="@string/app_name"
                            android:onClick="rentaHouse"
                            android:padding="8dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/rentHome"
                            android:textColor="@color/blue_text"
                            android:textSize="17dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll3"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="250dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/rectangle_background"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ll1">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/rent_apartment"
                            android:contentDescription="@string/app_name"
                            android:onClick="rentaApartment"
                            android:padding="8dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/rentApartment"
                            android:textColor="@color/blue_text"
                            android:textSize="17dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NavView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:itemHorizontalPadding="10dp"
        app:itemIconTint="@color/black"
        app:itemTextAppearance="@style/TextViewStyle"
        app:itemTextColor="@color/black"
        app:menu="@menu/main_menu" />
</androidx.drawerlayout.widget.DrawerLayout>